--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "wp-api-angular.js",
   "typings": "wp-api-angular.d.ts",
   "scripts": {
-    "start": "webpack-dev-server --port 8080 --json --progress --config webpack.config.js",
+    "start": "webpack-dev-server --port 8400 --json --progress --config webpack.config.js",
     "prebuild": "rm -rf dist",
     "build": "node ./node_modules/@angular/compiler-cli/src/main.js && npm run dumpdev && npm run dumpprod",
     "postbuild": "cp package.json README.md dist/",
@@ -33,18 +33,20 @@
   },
   "homepage": "https://github.com/shprink/wp-api-angular",
   "peerDependencies": {
-    "@angular/core": "^4.0.0",
-    "@angular/http": "^4.0.0"
+    "@angular/core": "^7.0.0",
+    "@angular/http": "^7.0.0"
   },
   "dependencies": {
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "rxjs": "^5.0.0"
+    "@angular/common": "^7.0.0",
+    "@angular/compiler": "^7.0.0",
+    "@angular/platform-browser": "^7.0.0",
+    "@angular/platform-browser-dynamic": "^7.0.0",
+    "rxjs": "^6.0.0"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^4.0.0",
+    "@angular/compiler-cli": "^7.0.0",
+    "@angular/http": "^7.0.0",
+    "@angular/core": "^7.0.0",
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
     "core-js": "^2.4.0",
@@ -53,7 +55,7 @@
     "path": "^0.4.9",
     "reflect-metadata": "^0.1.3",
     "ts-loader": "0.8.1",
-    "typescript": "^2.1.5",
+    "typescript": "3.1.1",
     "util": "^0.10.3",
     "webpack": "~1.13.1",
     "webpack-dev-server": "~1.14.1",
